Anonymous | Login | 2021-01-18 06:27 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031643 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2020-07-01 01:05 | 2020-12-02 17:13 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.0.0 | ||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031643: Visualization - Graphic3d_Camera::Copy() raises exception on copying ZNear < 0.0 | ||||||||
Description | Graphic3d_Camera::CopyMappingData() copies ZRange and ProjectionType in opposite order - as ProjectionType is used to verify ZRange. As result, copying orthographic camera with ZNear<0 into perspective camera results in exception. | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
||||||
|
![]() |
|
(0092864) git (administrator) 2020-07-01 01:10 |
Branch CR31643 has been created by kgv. SHA-1: 8403eb175833dd861ac31bafbd3f509ddfe6a1ce Detailed log of new commits: Author: kgv Date: Wed Jul 1 01:12:37 2020 +0300 0031643: Visualization - Graphic3d_Camera::Copy() raises exception on copying ZNear < 0.0 Graphic3d_Camera::CopyMappingData() now copies ProjectionType at first. |
(0092865) kgv (developer) 2020-07-01 08:28 |
Patch is ready for review in OCCT branch CR31643. http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR31643-master-KGV/ [^] |
(0092872) osa (developer) 2020-07-02 09:09 |
The patch is reviewed without remarks |
(0092945) bugmaster (administrator) 2020-07-04 12:13 |
Combination - OCCT branch : IR-2020-07-03 master SHA - 8f5760bc1679b45691fe8ac5fff1a4e978524009 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-07-03 SHA - 715997b86e7db13b7a7ddd1f26bab717621d84ec was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17174.900000000107 / 17168.64000000016 [+0.04%] Products Total CPU difference: 11226.760000000077 / 11202.250000000082 [+0.22%] Windows-64-VC14: OCCT Total CPU difference: 18704.34375 / 18712.96875 [-0.05%] Products Total CPU difference: 13043.15625 / 13084.109375 [-0.31%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0092964) git (administrator) 2020-07-04 12:52 |
Branch CR31643 has been deleted by inv. SHA-1: 8403eb175833dd861ac31bafbd3f509ddfe6a1ce |
![]() |
|||
occt: master 7e251883
Timestamp: 2020-06-30 22:12:37 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0031643: Visualization - Graphic3d_Camera::Copy() raises exception on copying ZNear < 0.0 Graphic3d_Camera::CopyMappingData() now copies ProjectionType at first. |
||
mod - src/Graphic3d/Graphic3d_Camera.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-07-01 01:05 | kgv | New Issue | |
2020-07-01 01:05 | kgv | Assigned To | => kgv |
2020-07-01 01:10 | git | Note Added: 0092864 | |
2020-07-01 08:28 | kgv | Note Added: 0092865 | |
2020-07-01 08:28 | kgv | Assigned To | kgv => osa |
2020-07-01 08:28 | kgv | Status | new => resolved |
2020-07-01 08:28 | kgv | Steps to Reproduce Updated | View Revisions |
2020-07-01 23:52 | kgv | Relationship added | child of 0026617 |
2020-07-01 23:52 | kgv | Product Version | 7.4.0 => 7.0.0 |
2020-07-02 09:09 | osa | Note Added: 0092872 | |
2020-07-02 09:09 | osa | Assigned To | osa => bugmaster |
2020-07-02 09:09 | osa | Status | resolved => reviewed |
2020-07-04 12:13 | bugmaster | Note Added: 0092945 | |
2020-07-04 12:13 | bugmaster | Status | reviewed => tested |
2020-07-04 12:23 | bugmaster | Changeset attached | => occt master 7e251883 |
2020-07-04 12:23 | bugmaster | Status | tested => verified |
2020-07-04 12:23 | bugmaster | Resolution | open => fixed |
2020-07-04 12:29 | bugmaster | Test case number | => Not required |
2020-07-04 12:52 | git | Note Added: 0092964 | |
2020-12-02 16:43 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:13 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |