0031643: Visualization - Graphic3d_Camera::Copy() raises exception on copying ZNear < 0.0

Graphic3d_Camera::CopyMappingData() now copies ProjectionType at first.